Fix navbar fixed overlap on scroll

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ a {
    3. Header / Navbar
    -------------------------------------------------------------------------- */
 .main-header {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
